--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,18 +7,19 @@
 </head>
 <body>
 
-	<h1>Listagem</h1>
-	<h2>Gerencie todos os usuários cadastrados no sistema.</h2>
+	<h1 th:text="#{title.task.a}"></h1>
+	<h2 th:text="#{subtitle.task.a}"></h2>
 	<div class="listagem">
 
 		<ul th:each="list : ${list}" >
 			<li >
 				<h2 th:text="${list.id}"></h2>
-				<p>Nome:<p>
+				<img alt="" th:src="${list.avatarUrl}" class="avatar">
+				<p th:text="#{sub.account.a}"><p>
 				<p th:text="${list.nome}" id="comms"><p>
-				<p>Email:<p>
+				<p th:text="#{sub.account.b}"><p>
 				<p th:text="${list.email}" id="comms"></p>
-				<p>Senha:<p>
+				<p th:text="#{sub.account.c}"><p>
 				<p th:text="${list.senha}" id="comms"></p>
 			</li>
 		</ul>
